--- a/facefeg/package.json
+++ b/facefeg/package.json
@@ -6,6 +6,7 @@
     "install": "^0.11.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-particles-js": "^2.2.0",
     "react-scripts": "1.1.4",
     "react-tilt": "^0.1.4",
     "tachyons": "^4.9.1"
